Update footer link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <footer class="footer">
         <p>This tool doesn't store any kind of information.</p>
-        <p><a href="https://github.com/dagerzuga/simple-api-test-tool" target="_blank">GitHub Repository</a></p>
+        <p><a class="disclaimer-link" href="https://github.com/dagerzuga/simple-api-test-tool" target="_blank">GitHub Repository</a></p>
     </footer>
 
     <button id="scrollToTopBtn" class="scroll-to-top-btn">
