Add link to external tool

--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
             </button>
             <pre class="js-response response"></pre>
         </div>
+
+        <div class="sdct-message">Need to spot the differences between two responses? Try <a href="https://simple-diff-checker-tool.netlify.app/" class="text-link">simple diff checker tool</a>!</div>
     </div>
 
     <div id="toast" class="toast">Response copied to clipboard!</div>
 
     <footer class="footer">
         <p>This tool doesn't store any kind of information.</p>
-        <a href="https://github.com/dagerzuga/simple-api-test-tool" class="disclaimer-link" target="_blank">GitHub Repository</a>
+        <a href="https://github.com/dagerzuga/simple-api-test-tool" class="text-link" target="_blank">GitHub Repository</a>
     </footer>
 
     <button id="scrollToTopBtn" class="scroll-to-top-btn" title="Go to top">
